test/fixtures/templates/stackhelper/quickstart-compliance-dod-scca/templates/vpc-vdss.template.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Provides networking configuration for a standard, isolated vdss vpc
Parameters:
  pRegionAZ1Name:
    Description: Availability Zone 1 Name in Region
    Type: AWS::EC2::AvailabilityZone::Name
  pRegionAZ2Name:
    Description: Availability Zone 2 Name in Region
    Type: AWS::EC2::AvailabilityZone::Name
  pVDSSVPCName:
    Description: VDSS VPC Name
    Type: String
    Default: VDSS
  pVDSSCIDR:
    Description: CIDR block for VDSS VPC
    Type: String
    Default: 10.20.0.0/16
  pVDMSCIDR:
    Description: CIDR of VDMS VPC
    Type: String
  pVDMSVPCId:
    Description: ID of VDMS VPC
    Type: String
  pSubnetACIDR:
    Description: CIDR block for Application AZ-1a subnet
    Type: String
    Default: 10.20.96.0/21
  pSubnetBCIDR:
    Description: CIDR block for Application AZ-1b subnet
    Type: String
    Default: 10.20.119.0/21
  pVPCTenancy:
    Description: Instance tenancy behavior for this VPC
    Type: String
    Default: default
    AllowedValues:
    - default
    - dedicated
  pEnvironment:
    Description: Environment (development, test, or production)
    Type: String
    Default: development
  QSS3BucketName:
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-ia
    Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
      can include numbers, lowercase letters, uppercase letters, and hyphens (-).
      It cannot start or end with a hyphen (-).
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: ^[0-9a-zA-Z-]+(/[0-9a-zA-Z-]+)*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/). It cannot start or end
      with forward slash (/) because they are automatically appended.
    Default: quickstart-enterprise-accelerator-nist
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/). It cannot start or end with forward slash (/) because they
      are automatically appended.
    Type: String
Resources:
  rVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: pVDSSCIDR
      InstanceTenancy:
        Ref: pVPCTenancy
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value:
          Ref: pVDSSVPCName
      - Key: Environment
        Value:
          Ref: pEnvironment
  rIGW:
    Type: AWS::EC2::InternetGateway
  rIGWattach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref rIGW
      VpcId: !Ref rVPC
  rSecurityGroupSSHFromProd:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId:
        Ref: rVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: pVDSSCIDR
      Tags:
      - Key: Name
        Value: sg-enable-ssh-access
      - Key: Environment
        Value:
          Ref: pEnvironment
  rSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: pSubnetACIDR
      AvailabilityZone:
        Ref: pRegionAZ1Name
      VpcId:
        Ref: rVPC
      Tags:
      - Key: Name
        Value: VDSS Subnet A
      - Key: Environment
        Value:
          Ref: pEnvironment
  rSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Ref: pSubnetBCIDR
      AvailabilityZone:
        Ref: pRegionAZ2Name
      VpcId:
        Ref: rVPC
      Tags:
      - Key: Name
        Value: VDSS Subnet B
      - Key: Environment
        Value:
          Ref: pEnvironment
  rSubnetAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: rRouteTableProd
      SubnetId:
        Ref: rSubnetA
  rSubnetAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: rRouteTableProd
      SubnetId:
        Ref: rSubnetB
  rRouteTableProd:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: rVPC
      Tags:
      - Key: Name
        Value: rt--network
  rRouteIGW:
    Type: AWS::EC2::Route
    DependsOn: rIGWattach
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref rRouteTableProd
      GatewayId: !Ref rIGW
  rPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      PeerVpcId: !Ref pVDMSVPCId
      VpcId: !Ref rVPC
  rRouteVDMS:
    Type: AWS::EC2::Route
    DependsOn: rIGWattach
    Properties:
      DestinationCidrBlock: !Ref pVDMSCIDR
      RouteTableId: !Ref rRouteTableProd
      VpcPeeringConnectionId: !Ref rPeeringConnection
Outputs:
  rVPC:
    Value:
      Ref: rVPC
  rRouteTableProd:
    Value:
      Ref: rRouteTableProd
  rSubnetA:
    Value:
      Ref: rSubnetA
  rSubnetB:
    Value:
      Ref: rSubnetB
  rPeeringToVDMS:
    Value:
      Ref: rPeeringConnection
...
